Added first initiative to SSO with Twitter. Seems to work, next step is to actually connect loggedIn session data to users in MongoDB (which is now nothing more than a TwitterId.

--- a/dev/client/ts/languages/en.json
+++ b/dev/client/ts/languages/en.json
@@ -2,5 +2,6 @@
   "title": "Adventure Go!",
   "menu1": "My catches",
   "menu2": "Settings",
-  "menu3": "About"
+  "menu3": "About",
+  "menu4": "Login"
 }
